# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-006ae51595285d6b3c425865e4108a20b778adb34af6c444c22b11d30d42cc14.json  query-0b0164e7c675600a7964672d1a1d7335301fa028fc6a95c27662271e64a54d20.json  query-876780fa263a7e581a4563f2cc4bcf0bc6d460faa8bae16669813a89bcece65b.json  query-f39430ccf0b873f90cfec87fda097982329e5f075eb3ee5314190bda1159d208.json  query-f78a5a4561fd7ec2eb4f0fce60289da174b2d9b65d5832a0425c6a55315960d2.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230218220858_make_status_not_null_in_subscriptions.sql  20240208055137_create_subscriptions_table.sql  20250624013728_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh  poll_ingress.sh
src/: authentication.rs  configuration.rs  email_client.rs  html_templates.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: form.html  get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  mod.rs  post.rs
templates/: publish_newsletter.html  send_newsletter.html  welcome.html
tests/: health_check.rs
tests/api/: change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
