[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Orlando Valverde <orlando.jesig.va@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
reqwest = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
