[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-session = { version = "0.10", features = ["redis-session-rustls"] }
actix-web = "4"
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
claims = "0.7"
config = "0.14"
dotenvy = "0.15"
htmlescape = "0.3"
lazy_static = "1.5"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
tera = "1.20"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.20"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
fake = "2.9"
tokio = { version = "1", features = ["macros", "rt"] }
quickcheck = "1"
quickcheck_macros = "1"
wiremock = "0.6"
serde_json = "1"
linkify = "0.10"

[features]
mocks = []
